Update foreground pgroup info before accessing it

Fixes a potential crash when opening the right mouse button context menu
just after launching some process in the shell, before konsole has had
any chance to update the foreground process group information.

BUG: 454122
BUG: 458157
(cherry picked from commit bc127dd2c1c30e8af9061809fcf217dfabf915d8)